modified the header section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,36 @@
 <body>
     <div>
         <header>
-            Welcome to my personal website
+            <div>
+                <ul>
+                    <li><a href="">Home</a> </li>
+                    <li><a href="">About</a> </li>
+                    <li> <a href="">Projects</a> </li>
+                    <li><button><a href="">Lets do It</a> </button> </li>
+                </ul>
+            </div>
         </header>
+        <div>
+            <div>
+                <div>
+                    <div>
+                        div
+                    </div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div>
+                    <div></div>
+                    <div><img src="./assets/1582603899002.jpeg" alt="avatar"></div>
+                    <div></div>
+                </div>
+                <div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
