--- a/index.html
+++ b/index.html
@@ -11,30 +11,56 @@
     <div>
         <header>
             <div>
+                <h1 style="padding-right:200px ;">Port <span style="color: blue ;">folio</span> </h1> </div>
                 <ul>
                     <li><a href="">Home</a> </li>
                     <li><a href="">About</a> </li>
                     <li> <a href="">Projects</a> </li>
-                    <li><button><a href="">Lets do It</a> </button> </li>
+                    <li><button><a href="">Hire Me</a> </button> </li>
                 </ul>
             </div>
         </header>
         <div>
             <div>
+                <div class="hero">
+                    <div>
+                        <div class="image1">
+                            <img src="./assets/1582603899002.jpeg" alt="">
+                        </div>
+                        
+                    </div>
+                    <div class="about">
+                        <h2>About Me</h2> <br>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptate nemo voluptatibus ratione libero eum facilis eveniet ea? Obcaecati, ab! Id, esse dolor ipsam magni nesciunt quaerat tenetur libero vel. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum corrupti accusantium modi libero mollitia, aspernatur aperiam? Eligendi amet veniam eveniet! Veniam, sequi nostrum architecto vel pariatur cupiditate voluptates minus similique.</p> <br>
+                        <button>Download Cv</button>
+                    </div>
+                </div>
+
+                
+                <div class="proj">
+                    <div> 
+                        <h2>Projects</h2>
+                    </div>
+                    <div class="projlist">
+                    <div>
+                        <h3>Moringa School</h3>
+                        <img src="./assets/1582603899002.jpeg" alt="avatar">
+                    </div>
+                    <div>
+                        <h3>Movers Website</h3>
+                        <img src="./assets/1582603899002.jpeg" alt="avatar">
+                    </div>
+                    <div>
+                        <h3>Quiz Board</h3> 
+                        <img src="./assets/1582603899002.jpeg" alt="avatar">
+                    </div>
+                    </div>
+
+                </div>
                 <div>
                     <div>
-                        div
+                        <h3>Contacts</h3>
                     </div>
-                    <div></div>
-                    <div></div>
-                </div>
-                <div>
-                    <div></div>
-                    <div><img src="./assets/1582603899002.jpeg" alt="avatar"></div>
-                    <div></div>
-                </div>
-                <div>
-                    <div></div>
                     <div></div>
                     <div></div>
                 </div>
