modified the about section and added the projects section

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
                     <div class="projlist">
                     <div>
                         <h3>Moringa School</h3>
-                        <img src="./assets/1582603899002.jpeg" alt="avatar">
+                        <img src="./assets/moringa.png" alt="avatar">
                     </div>
                     <div>
                         <h3>Movers Website</h3>
-                        <img src="./assets/1582603899002.jpeg" alt="avatar">
+                        <img src="./assets/movers.png" alt="avatar">
                     </div>
                     <div>
                         <h3>Quiz Board</h3> 
-                        <img src="./assets/1582603899002.jpeg" alt="avatar">
+                        <img src="./assets/quiz.png" alt="avatar">
                     </div>
                     </div>
 
