modified the about section and added the projects section

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <div>
                 <h1 style="padding-right:200px ;">Port <span style="color: blue ;">folio</span> </h1> </div>
                 <ul>
-                    <li><a href="">Home</a> </li>
-                    <li><a href="">About</a> </li>
-                    <li> <a href="">Projects</a> </li>
-                    <li><button><a href="">Hire Me</a> </button> </li>
+                    <li><a href="./index.html">Home</a> </li>
+                    <li><a href="#about">About</a> </li>
+                    <li> <a href="#proj">Projects</a> </li>
+                    <li><button><a href="#contact">Hire Me</a> </button> </li>
                 </ul>
             </div>
         </header>
@@ -31,7 +31,18 @@
                     </div>
                     <div class="about">
                         <h2>About Me</h2> <br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptate nemo voluptatibus ratione libero eum facilis eveniet ea? Obcaecati, ab! Id, esse dolor ipsam magni nesciunt quaerat tenetur libero vel. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum corrupti accusantium modi libero mollitia, aspernatur aperiam? Eligendi amet veniam eveniet! Veniam, sequi nostrum architecto vel pariatur cupiditate voluptates minus similique.</p> <br>
+                        
+                            <div class="type">
+                                <div class="exp">I'm experieced in:</div>
+                                <ul>
+                                    <li><span>Web Development</span></li>
+                                    <li><span>Wordpress</span></li>
+                                    <li><span>IT Support</span></li>
+                                    <li><span>Blogging</span></li>
+                                </ul>
+                            </div>
+                        
+                        <p>View more information by dowloading my CV. To dowload, press the button below</p> <br>
                         <button>Download Cv</button>
                     </div>
                 </div>
